# collections

./: README.md
c/: CMakeLists.txt  library.c  library.h
c/linkedlist/: CMakeLists.txt  llcompare.c  llcompare.h
c/linkedlist/dlinkedlist/: CMakeLists.txt  dlinkedlist.c  dlinkedlist.h
c/linkedlist/dlinkedlist/tests/: CMakeLists.txt  test_dlinkedlist.c
c/linkedlist/slinkedlist/: CMakeLists.txt  slinkedlist.c  slinkedlist.h
c/linkedlist/slinkedlist/tests/: CMakeLists.txt  test_slinkedlist.c
c/tharness/: CMakeLists.txt  tharness.c  tharness.h
cpp/: CMakeLists.txt  CMakeLists.txt.in
cpp/linkedlist/: CMakeLists.txt
cpp/linkedlist/dlinkedlist/: dlinkedlist.h
cpp/linkedlist/dlinkedlist/tests/: CMakeLists.txt  test_dlinkedlist.cpp
cpp/linkedlist/slinkedlist/: slinkedlist.h
cpp/linkedlist/slinkedlist/tests/: CMakeLists.txt  test_slinkedlist.cpp
