enable_testing()
add_executable(test_dlinkedlist test_dlinkedlist.c)
target_link_libraries(test_dlinkedlist dlinkedlist llcompare tharness)
add_test(allocate_dnode test_dlinkedlist allocate_dnode)
add_test(allocate_dlinkedlist test_dlinkedlist allocate_dlinkedlist)
add_test(push_head test_dlinkedlist push_head)
add_test(push_tail test_dlinkedlist push_tail)
add_test(pop_head test_dlinkedlist pop_head)
add_test(pop_tail test_dlinkedlist pop_tail)
add_test(search test_dlinkedlist search)
add_test(remove test_dlinkedlist remove)